[gd_scene load_steps=2 format=3 uid="uid://dnbafs74kfvr7"]

[ext_resource type="Script" uid="uid://bnr8y6eb0c5ac" path="res://data/Inventory_UI.gd" id="1_tahbm"]

[node name="Inventory_UI" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tahbm")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
max_text_lines = 5
auto_width = true
auto_height = true
item_count = 1
same_column_width = true

[node name="UseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "USE"

[node name="DropButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "DROP"

[node name="AddBurgerButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Add Burger"

[node name="AddScrapButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Add Scrap
"
